--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- Hello group -->
     <!-- Hello from VHarasymiv-->
-    <!-- Hello from Vyacheslav -->
+    <!-- Hello from  Vyacheslav-->
+    <!-- Hello from Iryna-->
 </body>
 </html>
