--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Hello group -->
+    <!-- Hello from Marek -->
     <!-- Hello from VHarasymiv-->
     <!-- Hello from Vyacheslav -->
 </body>
