Added coments with block

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <!--Hello one more time from Artem!-->
-    <!-- Hello from Marek -->
-    <!--Hello from Pavlo-->
-    <!-- Hello from VHarasymiv-->
-    <!-- Hello from  Vyacheslav-->
-    <!-- Hello from Iryna-->
+   <!--Block 1-2 start-->
+   <!--Block 1-2 end-->
+
+   <!--Block 3-4 start-->
+   <!--Block 3-4 end-->
+
+   <!--Block 5-6 start-->
+   <!--Block 5-6 end-->
+
+   <!--Block 7-8 start-->
+   <!--Block 7-8 end-->
+
+   <!--Block 9-10 start-->
+   <!--Block 9-10 end-->
+   
+   <!--Block 11-12 start-->
+   <!--Block 11-12 end-->
+
 </body>
 </html>
