--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-   <!--Block 1-2 start-->
+   <!--Block 1-2 Marek start-->
    <!--Block 1-2 end-->
 
-   <!--Block 3-4 start-->
+   <!--Block 3-4 Ira start-->
    <!--Block 3-4 end-->
 
-   <!--Block 5-6 start-->
+   <!--Block 5-6 Artem start-->
    <!--Block 5-6 end-->
 
-   <!--Block 7-8 start-->
+   <!--Block 7-8 Vova start-->
    <!--Block 7-8 end-->
 
-   <!--Block 9-10 start-->
+   <!--Block 9-10 Pavlo start-->
    <!--Block 9-10 end-->
-   
-   <!--Block 11-12 start-->
+
+   <!--Block 11-12 Vasyil start-->
    <!--Block 11-12 end-->
 
 </body>
