--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
    <!--Block 3-4 end-->
 
    <!--Block 5-6 Artem start-->
+   <div class="about-us">
+       <div class="img-about-us">
+           <img src="Block-5-image/about-us.jpg" alt="Two Men">
+       </div>
+       <div class="header-about-us">
+       <h2><span>About Us</span><span>.</span></h2>
+       </div>
+       <hr>
+       <div class="text-content">
+       <p><span class="text-content-header">
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aperiam explicabo, in unde maiores laborum a velit sapiente, sequi molestias et tenetur aliquam ab esse, cum aspernatur. Consequuntur, dignissimos dolores!
+       </span></p>
+       <p class="text-content-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eum corporis perspiciatis nisi temporibus itaque aperiam voluptatibus beatae necessitatibus ut, consectetur id inventore ipsam excepturi. Eaque illum vel obcaecati et!</p>
+       </div>
+       <div class="social-media-logo">
+           <a href="https://www.youtube.com/"><img src="Block-5-image/Block-5-icon/icon-youtube.svg" alt="Youtube icon"></a>
+           <a href="https://www.facebook.com/"><img src="Block-5-image/Block-5-icon/icon-facebook.svg" alt="Facebook icon"></a>
+           <a href="https://www.instagram.com/"><img src="Block-5-image/Block-5-icon/icon-instagram.svg" alt="Instagram icon"></a>
+       </div>
+   </div>
    <!--Block 5-6 end-->
 
    <!--Block 7-8 Vova start-->
