--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sport Shop</title>
 </head>
 <body>
    <!--Block 1-2 Marek start-->
@@ -16,7 +16,7 @@
    <!--Block 5-6 Artem start-->
    <div class="about-us">
        <div class="img-about-us">
-           <img src="Block-5-image/about-us.jpg" alt="Two Men">
+           <img width="500px" src="Block-5-image/about-us.jpg" alt="Two Men">
        </div>
        <div class="header-about-us">
        <h2><span>About Us</span><span>.</span></h2>
