--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <!--Block 5-6 Artem start-->
    <div class="about-us">
        <div class="img-about-us">
-           <img width="500px" src="Block-5-image/about-us.jpg" alt="Two Men">
+           <img width="500" src="Block-5-image/about-us.jpg" alt="Two Men">
        </div>
        <div class="header-about-us">
        <h2><span>About Us</span><span>.</span></h2>
