--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Shop</title>
 </head>
+
 <body>
-   <!--Block 1-2 Marek start-->
-   <!--Block 1-2 end-->
+    <!--Block 1-2 Marek start-->
+    <!--Block 1-2 end-->
 
-   <!--Block 3-4 Ira start-->
-   <!--Block 3-4 end-->
+    <!--Block 3-4 Ira start-->
+    <!--Block 3-4 end-->
 
-   <!--Block 5-6 Artem start-->
-   <div class="about-us">
-       <div class="img-about-us">
-           <img width="500" src="Block-5-image/about-us.jpg" alt="Two Men">
-       </div>
-       <div class="header-about-us">
-       <h2><span>About Us</span><span>.</span></h2>
-       </div>
-       <hr>
-       <div class="text-content">
-       <p><span class="text-content-header">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aperiam explicabo, in unde maiores laborum a velit sapiente, sequi molestias et tenetur aliquam ab esse, cum aspernatur. Consequuntur, dignissimos dolores!
-       </span></p>
-       <p class="text-content-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eum corporis perspiciatis nisi temporibus itaque aperiam voluptatibus beatae necessitatibus ut, consectetur id inventore ipsam excepturi. Eaque illum vel obcaecati et!</p>
-       </div>
-       <div class="social-media-logo">
-           <a href="https://www.youtube.com/"><img src="Block-5-image/Block-5-icon/icon-youtube.svg" alt="Youtube icon"></a>
-           <a href="https://www.facebook.com/"><img src="Block-5-image/Block-5-icon/icon-facebook.svg" alt="Facebook icon"></a>
-           <a href="https://www.instagram.com/"><img src="Block-5-image/Block-5-icon/icon-instagram.svg" alt="Instagram icon"></a>
-       </div>
-   </div>
-   <!--Block 5-6 end-->
+    <!--Block 5-6 Artem start-->
+    <div class="about-us">
+        <div class="img-about-us">
+            <img width="500" src="block-5-image/about-us.jpg" alt="Two Men">
+        </div>
+        <div class="header-about-us">
+            <h2><span>About Us</span><span>.</span></h2>
+        </div>
+        <hr>
+        <div class="text-content">
+            <p><span class="text-content-header">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aperiam explicabo, in unde maiores
+                    laborum a velit sapiente, sequi molestias et tenetur aliquam ab esse, cum aspernatur. Consequuntur,
+                    dignissimos dolores!
+                </span></p>
+            <p class="text-content-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eum corporis
+                perspiciatis nisi temporibus itaque aperiam voluptatibus beatae necessitatibus ut, consectetur id
+                inventore ipsam excepturi. Eaque illum vel obcaecati et!</p>
+        </div>
+        <div class="social-media-logo">
+            <a href="https://www.youtube.com/"><img src="block-5-image/block-5-icon/icon-youtube.svg"
+                    alt="Youtube icon"></a>
+            <a href="https://www.facebook.com/"><img src="block-5-image/block-5-icon/icon-facebook.svg"
+                    alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/"><img src="block-5-image/block-5-icon/icon-instagram.svg"
+                    alt="Instagram icon"></a>
+        </div>
+    </div>
+    <!--Block 5-6 end-->
 
-   <!--Block 7-8 Vova start-->
-   <!--Block 7-8 end-->
+    <!--Block 7-8 Vova start-->
+    <!--Block 7-8 end-->
 
-   <!--Block 9-10 Pavlo start-->
-   <!--Block 9-10 end-->
+    <!--Block 9-10 Pavlo start-->
+    <!--Block 9-10 end-->
 
-   <!--Block 11-12 Vasyil start-->
-   <!--Block 11-12 end-->
+    <!--Block 11-12 Vasyil start-->
+    <!--Block 11-12 end-->
 
 </body>
+
 </html>
