--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Block 5-6 Artem start-->
     <div class="about-us">
         <div class="img-about-us">
-            <img width="500" src="block-5-image/about-us.jpg" alt="Two Men">
+            <img width="500" src="block-five-image/about-us.jpg" alt="Two Men">
         </div>
         <div class="header-about-us">
             <h2><span>About Us</span><span>.</span></h2>
@@ -35,11 +35,11 @@
                 inventore ipsam excepturi. Eaque illum vel obcaecati et!</p>
         </div>
         <div class="social-media-logo">
-            <a href="https://www.youtube.com/"><img src="block-5-image/block-5-icon/icon-youtube.svg"
+            <a href="https://www.youtube.com/"><img src="block-five-image/block-five-icon/icon-youtube.svg"
                     alt="Youtube icon"></a>
-            <a href="https://www.facebook.com/"><img src="block-5-image/block-5-icon/icon-facebook.svg"
+            <a href="https://www.facebook.com/"><img src="block-five-image/block-five-icon/icon-facebook.svg"
                     alt="Facebook icon"></a>
-            <a href="https://www.instagram.com/"><img src="block-5-image/block-5-icon/icon-instagram.svg"
+            <a href="https://www.instagram.com/"><img src="block-five-image/block-five-icon/icon-instagram.svg"
                     alt="Instagram icon"></a>
         </div>
     </div>
