--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-   <!--Block 1-2 Marek start-->
-   <!--Block 1-2 end-->
+    <!--Block 1-2 Marek start-->
+    <!--Block 1-2 end-->
 
-   <!--Block 3-4 Ira start-->
-   <!--Block 3-4 end-->
+    <!--Block 3-4 Ira start-->
+    <!--Block 3-4 end-->
 
-   <!--Block 5-6 Artem start-->
-   <!--Block 5-6 end-->
+    <!--Block 5-6 Artem start-->
+    <!--Block 5-6 end-->
 
-   <!--Block 7-8 Vova start-->
-   <!--Block 7-8 end-->
+    <!--Block 7-8 Vova start-->
+    <!--Block 7-8 end-->
 
-   <!--Block 9-10 Pavlo start-->
-   <!--Block 9-10 end-->
+    <!--Block 9-10 Pavlo start-->
+    <div>
+        
+    </div>
+    <div>
+        <h1>MAIN COLLECTION</h1>
+        <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
 
-   <!--Block 11-12 Vasyil start-->
-   <!--Block 11-12 end-->
+    </div>
+    <!--Block 9-10 end-->
+
+    <!--Block 11-12 Vasyil start-->
+    <!--Block 11-12 end-->
 
 </body>
+
 </html>
