--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 
 <body>
     <!--Block 1-2 Marek start-->
+    <div class="return-period">
+        <p>
+            We’ve extended our returns period to 30 days.
+        </p>
+
+    </div>
     <!--Block 1-2 end-->
 
     <!--Block 3-4 Ira start-->
     <!--Block 3-4 end-->
 
     <!--Block 5-6 Artem start-->
-<<<<<<< HEAD
-=======
     <div class="about-us">
         <div class="img-about-us">
             <img width="500" src="block-five-image/about-us.jpg" alt="Two Men">
@@ -45,7 +49,6 @@
                     alt="Instagram icon"></a>
         </div>
     </div>
->>>>>>> 6d8b875f9867d8bc566b4e49af0f98628f571001
     <!--Block 5-6 end-->
 
     <!--Block 7-8 Vova start-->
