--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <body>
     <!--Block 1-2 Marek start-->
-    <div class="return-period">
-        <p>
-            We’ve extended our returns period to 30 days.
-        </p>
-
+    <div class="header">
+        <div>
+            <h1>
+                We’ve extended our returns period to 30 days.
+            </h2> 
+        </div>
     </div>
     <!--Block 1-2 end-->
 
