--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <!--Block 1-2 Marek start-->
     <div class="header">
-        <div>
-            <h1>
-                We’ve extended our returns period to 30 days.
-            </h2> 
+        <div class="return-period">
+            <p>
+                <b>We’ve extended our returns period to 30 days.</b>
+            </p2> 
+        </div>
+        <div class="logo">
+            <img src="block-one-image/logo.svg" alt="logo">
         </div>
     </div>
     <!--Block 1-2 end-->
