added menu & icons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
             </p2> 
         </div>
         <div class="logo">
-            <img src="block-one-image/logo.svg" alt="logo">
+            <img width="200" src="block-one-image/logo.svg" alt="logo">
+        </div>
+        <div class="menu">
+            <ul>
+                <li>About us</li>
+                <li>Sale</li>
+                <li>Collection</li>
+                <li>Blog</li>
+                <li>Contact us</li>
+            </ul>
+        </div>
+        <div class="social-media-logo">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/"></a> <img src="block-one-image/icon-facebook.svg" alt="Facebook logo">
+                    <a href="https://www.instagram.com/"></a> <img src="block-one-image/icon-instagram.svg" alt="Instagram logo">
+                    <a href="https://www.youtube.com/"></a> <img src="block-one-image/icon-youtube.svg" alt="Youtube logo">
+                </li>
+            </ul>
         </div>
     </div>
     <!--Block 1-2 end-->
