test background color for logo appearacnce

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             </p2> 
         </div>
         <div class="logo">
+            <style>
+                .logo
+                {
+                    background-color: black;
+                }
+            </style>
             <img width="200" src="block-one-image/logo.svg" alt="logo">
         </div>
         <div class="menu">
