added second block

--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
         <div class="return-period">
             <p>
                 <b>We’ve extended our returns period to 30 days.</b>
-            </p2> 
+            </p> 
         </div>
         <div class="logo">
-            <style>
-                .logo
-                {
-                    background-color: black;
-                }
-            </style>
             <img width="200" src="block-one-image/logo.svg" alt="logo">
         </div>
-        <div class="menu">
+        <div class="nav">
             <ul>
                 <li>About us</li>
                 <li>Sale</li>
@@ -37,12 +31,27 @@
         <div class="social-media-logo">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/"></a> <img src="block-one-image/icon-facebook.svg" alt="Facebook logo">
-                    <a href="https://www.instagram.com/"></a> <img src="block-one-image/icon-instagram.svg" alt="Instagram logo">
-                    <a href="https://www.youtube.com/"></a> <img src="block-one-image/icon-youtube.svg" alt="Youtube logo">
+                    <a href="https://www.facebook.com/"> <img src="block-one-image/icon-facebook.svg" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="block-one-image/icon-instagram.svg" alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img src="block-one-image/icon-youtube.svg" alt="Youtube logo"></a>
                 </li>
             </ul>
         </div>
+    </div>
+
+    <div class="front-page">
+        <div class="second-block-background">
+            <img width="500" src="block-one-image/background.jfif" alt="Basketball player">
+        </div>
+        <div class="front-page-text">
+            <p><b>ASPIRE TO MORE</b></p>
+            <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS</b></h1>
+        </div>
+        <div class="shop-now-button">
+            <button type="button">Shop Now --></button>
+        </div>
+
+
     </div>
     <!--Block 1-2 end-->
 
