--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS</b></h1>
         </div>
         <div class="shop-now-button">
-            <button type="button">Shop Now --></button>
+            <button type="button">Shop Now</button>
         </div>
 
 
