--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
         </div>
         <div class="front-page-text">
             <p><b>ASPIRE TO MORE</b></p>
-            <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS</b></h1>
+            <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
             <button type="button">Shop Now</button>
         </div>
-
-
     </div>
     <!--Block 1-2 end-->
 
