fixed problem with images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </p> 
         </div>
         <div class="logo">
-            <img width="200" src="block-one-image/logo.svg" alt="logo">
+            <img width="200" src="block-one-and-two-images/logo.svg" alt="logo">
         </div>
         <div class="nav">
             <ul>
@@ -31,9 +31,12 @@
         <div class="social-media-logo">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/"> <img src="block-one-image/icon-facebook.svg" alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img src="block-one-image/icon-instagram.svg" alt="Instagram logo"></a>
-                    <a href="https://www.youtube.com/"> <img src="block-one-image/icon-youtube.svg" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg" 
+                        alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg" 
+                        alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg" 
+                        alt="Youtube logo"></a>
                 </li>
             </ul>
         </div>
