problem with button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
-           <button type="button"><a href="#collection">Shop Now</a></button>
+           <button type="button">Shop Now</a></button><a href="#collection"></a>
         </div>
     </div>
     <!--Block 1-2 end-->
