problem with button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
-            <a href="#collection"> <button type="button">Shop Now</a>
+            <a href="#collection"></a> <button type="button">Shop Now</button>
         </div>
     </div>
     <!--Block 1-2 end-->
