--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <img width="200" src="block-one-and-two-images/logo.svg" alt="logo">
         </div>
         <div class="nav">
-            <ul>
-                <li>About us</li>
-                <li>Sale</li>
-                <li>Collection</li>
-                <li>Blog</li>
-                <li>Contact us</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li>About us</li>
+                    <li>Sale</li>
+                    <li>Collection</li>
+                    <li>Blog</li>
+                    <li>Contact us</li>
+                </ul>
+            </nav>
         </div>
         <div class="social-media-logo">
             <ul>
