--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li>About us</li>
-                    <li>Sale</li>
-                    <li>Collection</li>
-                    <li>Blog</li>
-                    <li>Contact us</li>
+                    <li><a>About us</a></li>
+                    <li><a>Sale</a></li>
+                    <li><a>Collection</a></li>
+                    <li><a>Blog</a></li>
+                    <li><a></a>Contact us</a></li>
                 </ul>
             </nav>
         </div>
