--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a>About us</a></li>
-                    <li><a>Sale</a></li>
-                    <li><a>Collection</a></li>
-                    <li><a>Blog</a></li>
-                    <li><a></a>Contact us</a></li>
+                    <li><a href="#about-us">About us</a></li>
+                    <li><a href="#sale">Sale</a></li>
+                    <li><a href="#collection">Collection</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact-us">Contact us</a></li>
                 </ul>
             </nav>
         </div>
