--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="return-period">
             <p>
                 <b>We’ve extended our returns period to 30 days.</b>
-            </p> 
+            </p>
         </div>
         <div class="logo">
             <img width="200" src="block-one-and-two-images/logo.svg" alt="logo">
@@ -31,12 +31,12 @@
         <div class="social-media-logo">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg" 
-                        alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg" 
-                        alt="Instagram logo"></a>
-                    <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg" 
-                        alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg"
+                            alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg"
+                            alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg"
+                            alt="Youtube logo"></a>
                 </li>
             </ul>
         </div>
@@ -51,7 +51,7 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
-           <button button type="button"><a href="#collection">Shop Now</a></button>
+            <button button type="button"><a href="#collection">Shop Now</a></button>
         </div>
     </div>
     <!--Block 1-2 end-->
@@ -94,11 +94,29 @@
 
     <!--Block 9-10 Pavlo start-->
     <div>
-        
+
     </div>
-    <div>
+    <div class="collection">
         <h1>MAIN COLLECTION</h1>
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
+        <ul>
+            <li>women</li>
+            <li>men</li>
+            <li>shoes</li>
+        </ul>
+        <div>
+            <img src="block-9-10-img/480.jpg" alt="480">
+            <h1>Puma Sports Bra</h1>
+            <h2>$12,00USD</h2>
+            <button>"Add to Cart"</button>
+        </div>
+        <div>
+            <img src="block-9-10-img/480 (1).jpg" alt="480(1)">
+            <h1>Reebok Long Sleeve Top</h1>
+            <h2>$18,00USD</h2>
+            <button>"Add to Cart"</button>
+
+        </div>
 
     </div>
     <!--Block 9-10 end-->
