--- a/index.html
+++ b/index.html
@@ -101,33 +101,41 @@
     </div>
     <div class="collection">
         <h1>MAIN COLLECTION</h1>
+        <hr width="100">
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
-        <ul>
-            <li>women</li>
-            <li>men</li>
-            <li>shoes</li>
-        </ul>
+          <h4>Women</h4>
+          <h4>Men</h4>
+          <h4>Shoes</h4>
         <div>
-            <img src="block-9-10-img/480.jpg" alt="480">
-            <h1>Puma Sports Bra</h1>
-            <h2>$12,00USD</h2>
-            <button>"Add to Cart"</button>
-        </div>
-        <div>
-            <img src="block-9-10-img/480 (1).jpg" alt="480(1)">
-            <h1>Reebok Long Sleeve Top</h1>
-            <h2>$18,00USD</h2>
-            <button>"Add to Cart"</button>
+            <div>
+                <img src="block-9-10-img/480.jpg" alt="480">
+                <br>
+                <a href="#">Puma Sports Bra</a>
+                <h2>$12,00USD</h2>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-9-10-img/480 (1).jpg" alt="480(1)">
+                <br>
+                <a href="#">Reebok Long Sleeve Top</a>
+                <h3>$18,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+                <img src="block-9-10-img/480 (2).jpg" alt="480(2)">
+                <br>
+                <a href="#">Quicksilver Workout Top</a>
+                <h3>$12,00USD</h3>
+                <button>"Add to Cart"</button>
+
+            </div>
 
         </div>
+        <!--Block 9-10 end-->
 
-    </div>
-    <!--Block 9-10 end-->
+        <!--Block 9-10 end-->
 
-    <!--Block 9-10 end-->
-
-    <!--Block 11-12 Vasyil start-->
-    <!--Block 11-12 end-->
+        <!--Block 11-12 Vasyil start-->
+        <!--Block 11-12 end-->
 
 </body>
 
