--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
         </div>
         <div class="nav">
             <nav>
-                <ul>
-                    <li><a href="#about-us">About us</a></li>
-                    <li><a href="#sale">Sale</a></li>
-                    <li><a href="#collection">Collection</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact-us">Contact us</a></li>
-                </ul>
+                <a href="#about-us">About us</a>
+                <a href="#sale">Sale</a>
+                <a href="#collection">Collection</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact-us">Contact us</a>
             </nav>
         </div>
         <div class="social-media-logo">
@@ -53,7 +51,6 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
-            <button button type="button"><a href="#collection">Shop Now</a></button>
             <a href="#collection"></a> <button type="button">Shop Now</button>
         </div>
     </div>
