changed nav for social

--- a/index.html
+++ b/index.html
@@ -29,16 +29,11 @@
             </nav>
         </div>
         <div class="social-media-logo">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg"
-                            alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg"
-                            alt="Instagram logo"></a>
-                    <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg"
-                            alt="Youtube logo"></a>
-                </li>
-            </ul>
+            <nav>
+                <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg" alt="Instagram logo"></a>
+                <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg"  alt="Youtube logo"></a>
+            </nav>
         </div>
     </div>
 
