--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--Block 1-2 Marek start-->
-    <div class="header">
+    <header>
         <div class="return-period">
             <p>
                 <b>We’ve extended our returns period to 30 days.</b>
@@ -35,7 +35,7 @@
                 <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg"  alt="Youtube logo"></a>
             </nav>
         </div>
-    </div>
+    </header>
 
     <div class="front-page">
         <div class="second-block-background">
