--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <h1>MAIN COLLECTION</h1>
         <hr width="100">
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
-          <h4>Women</h4>
-          <h4>Men</h4>
-          <h4>Shoes</h4>
+        <h4>Women</h4>
+        <h4>Men</h4>
+        <h4>Shoes</h4>
         <div>
             <div>
                 <img src="block-9-10-img/480.jpg" alt="480">
@@ -115,27 +115,69 @@
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-9-10-img/480 (1).jpg" alt="480(1)">
+                <img src="block-9-10-img/480(1).jpg" alt="480(1)">
                 <br>
                 <a href="#">Reebok Long Sleeve Top</a>
                 <h3>$18,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
-                <img src="block-9-10-img/480 (2).jpg" alt="480(2)">
+                <img src="block-9-10-img/480(2).jpg" alt="480(2)">
                 <br>
                 <a href="#">Quicksilver Workout Top</a>
                 <h3>$12,00USD</h3>
                 <button>"Add to Cart"</button>
-
+            <div>
+                <img src="block-9-10-img/480(3).jpg" alt="480(3)">
+                <br>
+                <a href="#">Adidas Compression Tee</a>
+                <h3>$33,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="/block-9-10-img/480(4).jpg" alt="480(4)">
+                <br>
+                <a href="#">Reebok Fitness Jacket</a>
+                <h3>$52,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="/block-9-10-img/480(5).jpg" alt="480(5)">
+                <br>
+                <a href="#">Quicksilver Tech T-Shirt</a>
+                <h3>$21,00USD</h3>
+                <button>"Add to Cart</button>
+            </div>
+            <div>
+                <img src="/block-9-10-img/480(6).jpg" alt="480(6)">
+                <br>
+                <a href="#">Nike Amanda Running Shoes</a>
+                <h3>$120,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="/block-9-10-img/480(7).jpg" alt="480(7)">
+                <br>
+                <a href="#">Puma Basket Shoes</a>
+                <h3>$140,00USD</h3>
+                <button>"Add to Cart</button>
+            </div>
+            <div>
+                <img src="/block-9-10-img/480(8).jpg" alt="480(8)">
+                <br>
+                <a href="#">Adidas Campus</a>
+                <h3>$130,00USD</h3>
+                <button>"Add to Cart"</button>
             </div>
 
         </div>
-        <!--Block 9-10 end-->
 
-        <!--Block 9-10 end-->
+    </div>
+    <!--Block 9-10 end-->
 
-        <!--Block 11-12 Vasyil start-->
-        <!--Block 11-12 end-->
+    <!--Block 9-10 end-->
+
+    <!--Block 11-12 Vasyil start-->
+    <!--Block 11-12 end-->
 
 </body>
 
