--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     <!--Block 7-8 end-->
 
     <!--Block 9-10 Pavlo start-->
-    <div>
+    <div class="carusel">
+        <img width ="300"src="/block-9-10-img/carusel/one.jpg" alt="one">
+        <h1>20% of all T-Shirt</h1>
+        <button>Shop collection</button>
 
     </div>
     <div class="collection">
