--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="carusel">
         <img width ="300"src="/block-9-10-img/carusel/one.jpg" alt="one">
         <h1>20% of all T-Shirt</h1>
-        <button>Shop collection</button>
+        <button> <a href="#">Shop Collection</a></button>
 
     </div>
     <div class="collection">
