--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
     <!--Block 1-2 end-->
 
     <!--Block 3-4 Ira start-->
+
+      <div class="menu">
+          <img src="block-3-4/men" alt="men">
+        <p>NEW ARRIWALS.</p>
+        <button>Shop Collection</button>
+
+        <p>TRAINERS.</p>
+        <button>Shop Collection</button>
+
+        <p>HOT SALE.</p>
+        <button>Shop Collection</button>
+
+
+      </div>
+
+
     <!--Block 3-4 end-->
 
     <!--Block 5-6 Artem start-->
