--- a/index.html
+++ b/index.html
@@ -63,9 +63,27 @@
 
         <p>HOT SALE.</p>
         <button>Shop Collection</button>
-
-
       </div>
+
+      <div class=text>
+       <p>WHY CHOOSE US.</p>
+       <p>Keep fit, follow a healthy lifestyle with us!</p>
+      </div>
+ 
+    <div class=benefits>
+        <p>FREE SHIPING OVER $90</p>
+        <p>Get advantage of our free worldwide shipping on all orders over $90.</p>
+
+        <p>EASY 30-DAY RETURN</p>
+        <p>If the item does not suit you, please send it back to us within 30 days.</p>
+
+        <p>ECO MATERIALS</p>
+        <p>All items are made with at least 30% recycled materials and zero virgin polyester.</p>
+
+        <p>20 PAYMENT METHODS</p>
+        <p>Pay for your orders with credit cards, PayPal, AliPay, and other payment methods.</p>
+
+    </div>
 
 
     <!--Block 3-4 end-->
