--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@
     <!--Block 3-4 Ira start-->
 
       <div class="menu">
-          <img src="block-3-4/men" alt="men">
+          <img width="300" src="block-3-4-img/600999029fd19b002191fcea.svg" alt="men with sneakers">
         <p>NEW ARRIWALS.</p>
         <button>Shop Collection</button>
 
+         <img width="300" src="block-3-4-img/60111a15b8ff0500222efb7e_optimized.png" alt="white sneakers on a skateboard">
         <p>TRAINERS.</p>
         <button>Shop Collection</button>
 
+         <img width="300" src="block-3-4-img/60111991b8ff0500222efb0d_optimized.png" alt="topic and bottle">
         <p>HOT SALE.</p>
         <button>Shop Collection</button>
+        
       </div>
 
       <div class=text>
