--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="fitness-collection-image">
             <img width="500" src="block-five-six-image/new-trend.jpg" alt="Sport Women">
         </div>
-        <p>Trending</p>
+        <p>Trending.</p>
         <h2><span class="fitnes-collection-header">New Fitness Collection</span><span>.</span></h2>
         <div class="button-shop-now">
             <button type="button" name="Shop Now"><a href="#main-collection">Shop Now</a></button>
