trying to create a connection to collection part

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div>
 
     </div>
-    <div class="collection">
+    <div id="collection">
         <h1>MAIN COLLECTION</h1>
         <hr width="100">
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
