--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
         </div>
         <div class="shop-now-button">
-            <a href="#collection"></a> <button type="button">Shop Now</button>
+            <a href="#collection"><button type="button">Shop Now</button></a>
         </div>
     </div>
     <!--Block 1-2 end-->
