created connection to About-us

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!--Block 3-4 end-->
 
     <!--Block 5-6 Artem start-->
-    <div class="about-us">
+    <div id="about-us">
         <div class="img-about-us">
             <img width="500" src="block-five-six-image/about-us.jpg" alt="Two Men">
         </div>
