--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
             </nav>
         </div>
     </header>
-
-    <div class="front-page">
-        <div class="second-block-background">
-            <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
+    <main>
+        <div class="front-page">
+            <div class="second-block-background">
+                <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
+            </div>
+            <div class="front-page-text">
+                <p><b>ASPIRE TO MORE</b></p>
+                <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
+            </div>
+            <div class="shop-now-button">
+                <form action="#collection">
+                    <button type="submit">Shop Now</button>
+                 </form>
+            </div>
         </div>
-        <div class="front-page-text">
-            <p><b>ASPIRE TO MORE</b></p>
-            <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
-        </div>
-        <div class="shop-now-button">
-            <a href="#collection"><button type="button">Shop Now</button></a>
-        </div>
-    </div>
+    </main>
     <!--Block 1-2 end-->
 
     <!--Block 3-4 Ira start-->
