--- a/index.html
+++ b/index.html
@@ -197,35 +197,35 @@
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="/block-9-10-img/480(4).jpg" alt="480(4)">
+                <img src="block-9-10-img/480(4).jpg" alt="480(4)">
                 <br>
                 <a href="#">Reebok Fitness Jacket</a>
                 <h3>$52,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="/block-9-10-img/480(5).jpg" alt="480(5)">
+                <img src="block-9-10-img/480(5).jpg" alt="480(5)">
                 <br>
                 <a href="#">Quicksilver Tech T-Shirt</a>
                 <h3>$21,00USD</h3>
                 <button>"Add to Cart</button>
             </div>
             <div>
-                <img src="/block-9-10-img/480(6).jpg" alt="480(6)">
+                <img src="block-9-10-img/480(6).jpg" alt="480(6)">
                 <br>
                 <a href="#">Nike Amanda Running Shoes</a>
                 <h3>$120,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="/block-9-10-img/480(7).jpg" alt="480(7)">
+                <img src="block-9-10-img/480(7).jpg" alt="480(7)">
                 <br>
                 <a href="#">Puma Basket Shoes</a>
                 <h3>$140,00USD</h3>
                 <button>"Add to Cart</button>
             </div>
             <div>
-                <img src="/block-9-10-img/480(8).jpg" alt="480(8)">
+                <img src="block-9-10-img/480(8).jpg" alt="480(8)">
                 <br>
                 <a href="#">Adidas Campus</a>
                 <h3>$130,00USD</h3>
