Changed Shop Now

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
                 <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
             </div>
             <div class="shop-now-button">
-                <form action="#collection">
-                    <button type="submit">Shop Now</button>
-                 </form>
+                <a href="#collection">Shop Now</a>
             </div>
         </div>
     </main>
@@ -134,7 +132,7 @@
         <p>Trending.</p>
         <h2><span class="fitnes-collection-header">New Fitness Collection</span><span>.</span></h2>
         <div class="button-shop-now">
-            <button type="button" name="Shop Now"><a href="#main-collection">Shop Now</a></button>
+            <a href="#collection">Shop Now</a>
             <br>
         </div>
     </div>
