--- a/index.html
+++ b/index.html
@@ -145,24 +145,24 @@
     <div class="carusel">
         <img width="300" src="block-9-10-img/carusel/one.jpg" alt="one">
         <h2>20% of all T-Shirt</h2>
-        <button> <a href="#">Shop Collection</a></button>
+        <a href="#">Shop Collection</a>
         <br>
         <img width="300" src="block-9-10-img/carusel/two.jpg" alt="two">
         <h2>25% OFF All Trainers </h2>
-        <button> <a href="#">Shop Collection</a></button>
+        <a href="#">Shop Collection</a>
         <br>
         <img width="300" src="block-9-10-img/carusel/three.jpg" alt="three">
         <h2>30% OFF ALL Jacket</h2>
-        <button> <a href="#">Shop Collection</a></button>
+        <a href="#">Shop Collection</a>
         <br>
         <img width="300" src="block-9-10-img/carusel/two.jpg" alt="two">
         <h2>25% OFF All Trainers </h2>
-        <button> <a href="#">Shop Collection</a></button>
+        <a href="#">Shop Collection</a>
 
     </div>
     <div id="collection">
         <h1>MAIN COLLECTION</h1>
-        <hr width="100">
+        <border width="100">
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
         <h4>Women</h4>
         <h4>Men</h4>
