--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     <div id="collection">
         <h1>MAIN COLLECTION</h1>
-        <border size="200">
+        <border height="200">
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
         <h4>Women</h4>
         <h4>Men</h4>
