--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         <img width="300" src="block-9-10-img/carusel/two.jpg" alt="two">
         <h2>25% OFF All Trainers </h2>
         <a href="#">Shop Collection</a>
-
     </div>
+
     <div id="collection">
         <h1>MAIN COLLECTION</h1>
         <border height="200">
@@ -182,11 +182,13 @@
                 <h3>$18,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
-            <img src="block-9-10-img/480(2).jpg" alt="480(2)">
-            <br>
-            <a href="#">Quicksilver Workout Top</a>
-            <h3>$12,00USD</h3>
-            <button>"Add to Cart"</button>
+            <div>
+                <img src="block-9-10-img/480(2).jpg" alt="480(2)">
+                <br>
+                <a href="#">Quicksilver Workout Top</a>
+                <h3>$12,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
             <div>
                 <img src="block-9-10-img/480(3).jpg" alt="480(3)">
                 <br>
