--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div id="collection">
         <div>
         <h1>MAIN COLLECTION</h1>
-        <hr width="200">
+        <hr style="width:200";>
         <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
         <h4>Women</h4>
         <h4>Men</h4>
