changed folrders' names and their paths

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         </div>
         <div class="social-media-logo">
             <nav>
-                <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/icon-facebook.svg"
-                        alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/icon-instagram.svg"
-                        alt="Instagram logo"></a>
-                <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/icon-youtube.svg"
+                <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/Icons/icon-youtube.svg"
                         alt="Youtube logo"></a>
+                <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/Icons/icon-facebook.svg"
+                        alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/Icons/icon-instagram.svg"
+                        alt="Instagram logo"></a>
             </nav>
         </div>
     </header>
@@ -58,16 +58,16 @@
     <!--Block 3-4 Ira start-->
 
     <div class="menu">
-        <img width="300" src="block-3-4-img/600999029fd19b002191fcea.svg" alt="men with sneakers">
+        <img width="300" src="block-three-four-img/man-with-sneakers.svg" alt="men with sneakers">
         <p>NEW ARRIWALS.</p>
         <button>Shop Collection</button>
 
-        <img width="300" src="block-3-4-img/60111a15b8ff0500222efb7e_optimized.png"
+        <img width="300" src="block-three-four-img/skateboarder.png"
             alt="white sneakers on a skateboard">
         <p>TRAINERS.</p>
         <button>Shop Collection</button>
 
-        <img width="300" src="block-3-4-img/60111991b8ff0500222efb0d_optimized.png" alt="topic and bottle">
+        <img width="300" src="block-three-four-img/clothes.png" alt="topic and bottle">
         <p>HOT SALE.</p>
         <button>Shop Collection</button>
 
@@ -171,63 +171,63 @@
         </div>
             <div>
                 <div>
-                    <img src="block-9-10-img/480.jpg" alt="480">
+                    <img src="block-nine-ten-img/woman.jpg" alt="woman">
                     <br>
                     <a href="#">Puma Sports Bra</a>
                     <h2>$12,00USD</h2>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(1).jpg" alt="480(1)">
+                    <img src="block-nine-ten-img/woman-one.jpg" alt="woman-one">
                     <br>
                     <a href="#">Reebok Long Sleeve Top</a>
                     <h3>$18,00USD</h3>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(2).jpg" alt="480(2)">
+                    <img src="block-nine-ten-img/woman-two.jpg" alt="woman-two">
                     <br>
                     <a href="#">Quicksilver Workout Top</a>
                     <h3>$12,00USD</h3>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(3).jpg" alt="480(3)">
+                    <img src="block-nine-ten-img/man.jpg" alt="man">
                     <br>
                     <a href="#">Adidas Compression Tee</a>
                     <h3>$33,00USD</h3>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(4).jpg" alt="480(4)">
+                    <img src="block-nine-ten-img/man-one.jpg" alt="man-one">
                     <br>
                     <a href="#">Reebok Fitness Jacket</a>
                     <h3>$52,00USD</h3>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(5).jpg" alt="480(5)">
+                    <img src="block-nine-ten-img/man-two.jpg" alt="man-two">
                     <br>
                     <a href="#">Quicksilver Tech T-Shirt</a>
                     <h3>$21,00USD</h3>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(6).jpg" alt="480(6)">
+                    <img src="block-nine-ten-img/sneakers.jpg" alt="sneakers">
                     <br>
                     <a href="#">Nike Amanda Running Shoes</a>
                     <h3>$120,00USD</h3>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(7).jpg" alt="480(7)">
+                    <img src="block-nine-ten-img/sneakers-one.jpg" alt="sneakers-one">
                     <br>
                     <a href="#">Puma Basket Shoes</a>
                     <h3>$140,00USD</h3>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="block-9-10-img/480(8).jpg" alt="480(8)">
+                    <img src="block-nine-ten-img/sneakers-two.jpg" alt="sneakers-two">
                     <br>
                     <a href="#">Adidas Campus</a>
                     <h3>$130,00USD</h3>
